fixes banner CSS (flex property) on IE 11

--- a/assets/css/scss/layout/_banner.scss
+++ b/assets/css/scss/layout/_banner.scss
@@ -51,6 +51,7 @@
 		.page-has-banner-full & {
 			@include media (">=tablet") {
 				flex: 1;
+				height: auto;
 				min-height: auto;
 			}
 		}
